Fixed stretching of other flex boxes while expanded

--- a/styles.css
+++ b/styles.css
@@ -48,6 +48,7 @@ button {
     margin: 0px;
     border-color: black;
     border-width: 3px;
+    align-self: flex-start;
 }
 
 #main div img{
